// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepSalaires /> should render lastSalaires 1`] = `
.c4 {
  position: relative;
  overflow: hidden;
}

.c4:before,
.c4:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c4:before {
  left: -2rem;
}

.c4:after {
  right: -2rem;
}

.c5 {
  overflow-x: auto;
}

.c6 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-collapse: collapse;
  border-spacing: 0;
}

.c6 caption {
  padding: 0.625rem 0;
  font-style: italic;
  text-align: center;
}

.c6 td,
.c6 th {
  padding: 0.625rem 1rem;
  border: 1px solid #c9d3df;
}

.c6 thead,
.c6 tfoot {
  padding: 0.625rem 1rem;
  vertical-align: bottom;
  background: #f9f9fc;
}

.c6 tfoot {
  vertical-align: top;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c7 {
  width: 70%;
}

.c7 tr > td:nth-child(2) {
  width: 70%;
  text-align: left;
}

.c9 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c9::-webkit-outer-spin-button,
.c9::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8 {
  position: relative;
  display: inline-block;
  margin-right: 1.25rem;
}

.c10 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <p
    class="c0"
  >
    Avez-vous alterné, au cours de votre contrat de travail des périodes de travail à temps plein et à temps partiel ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="hasTempsPartiel"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        checked=""
        name="hasTempsPartiel"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Avez-vous eu le même salaire lors des 12 derniers mois ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="hasSameSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        checked=""
        name="hasSameSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <table
        class="c6 c7"
      >
        <caption>
          Salaire mensuel brut (prendre en compte les primes et avantages en nature)
        </caption>
        <thead>
          <tr>
            <th>
              Mois
            </th>
            <th>
              Salaire mensuel brut
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <label
                for="salary0"
              >
                juillet 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary0"
                  name="salaires[0].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary1"
              >
                juin 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary1"
                  name="salaires[1].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary2"
              >
                mai 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary2"
                  name="salaires[2].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary3"
              >
                avril 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary3"
                  name="salaires[3].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary4"
              >
                mars 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary4"
                  name="salaires[4].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary5"
              >
                février 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary5"
                  name="salaires[5].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary6"
              >
                janvier 2019
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary6"
                  name="salaires[6].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary7"
              >
                décembre 2018
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary7"
                  name="salaires[7].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary8"
              >
                novembre 2018
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary8"
                  name="salaires[8].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary9"
              >
                octobre 2018
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary9"
                  name="salaires[9].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary10"
              >
                septembre 2018
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary10"
                  name="salaires[10].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary11"
              >
                août 2018
              </label>
            </td>
            <td>
              <div
                class="c8"
              >
                <input
                  class="c9"
                  id="salary11"
                  name="salaires[11].salary"
                  size="10"
                  type="number"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="c10"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<StepSalaires /> should render same salaire 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c4 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c6 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5 {
  position: relative;
  display: inline-block;
  margin-right: 1.25rem;
}

.c7 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <p
    class="c0"
  >
    Avez-vous alterné, au cours de votre contrat de travail des périodes de travail à temps plein et à temps partiel ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="hasTempsPartiel"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        checked=""
        name="hasTempsPartiel"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Avez-vous eu le même salaire lors des 12 derniers mois ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        checked=""
        name="hasSameSalaire"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        name="hasSameSalaire"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <label
    class="c4"
  >
    Quel a été votre salaire mensuel brut ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </label>
  <div
    class="c5"
  >
    <input
      class="c6"
      name="salaire"
      size="10"
      type="number"
      value="3000"
    />
    <span
      aria-hidden="true"
      class="c7"
    >
      €
    </span>
  </div>
  <span>
    Prendre en compte les primes et avantages en nature.
  </span>
</div>
`;

exports[`<StepSalaires /> should render tempsPartiel 1`] = `
.c14 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  line-height: initial;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  vertical-align: initial;
  background: none;
  border: none;
  border-radius: 0;
}

.c14:focus,
.c14:hover,
.c14:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c4 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c16 {
  margin: 1.25rem 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c6 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 1.25rem;
}

.c8 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 1.25rem;
}

.c7 {
  font-weight: 700;
}

.c9 {
  width: 100%;
}

.c10 {
  width: 8em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c10::-webkit-outer-spin-button,
.c10::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c12 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c12::-webkit-outer-spin-button,
.c12::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c11 {
  position: relative;
  display: inline-block;
}

.c13 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c15 {
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

<div>
  <p
    class="c0"
  >
    Avez-vous alterné, au cours de votre contrat de travail des périodes de travail à temps plein et à temps partiel ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        checked=""
        name="hasTempsPartiel"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        name="hasTempsPartiel"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <label
    class="c4"
  >
    Quelles ont été vos vos différentes périodes de travail ?
  </label>
  <div
    class="c5"
  >
    <div
      class="c6 c7"
    >
      Type de contrat
    </div>
    <div
      class="c8 c7"
    >
      Durée en mois
    </div>
    <div
      class="c7"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      <select
        class="c9"
        name="salairePeriods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c8"
    >
      <input
        class="c10"
        name="salairePeriods[0].duration"
        size="8"
        type="number"
        value="24"
      />
    </div>
    <div>
      <div
        class="c11"
      >
        <input
          class="c12"
          name="salairePeriods[0].salary"
          size="10"
          type="number"
          value="2000"
        />
        <span
          aria-hidden="true"
          class="c13"
        >
          €
        </span>
      </div>
      <button
        class="c14 c15"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <div
    class="c5"
  >
    <div
      class="c6"
    >
      <select
        class="c9"
        name="salairePeriods[1].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c8"
    >
      <input
        class="c10"
        name="salairePeriods[1].duration"
        size="8"
        type="number"
        value="12"
      />
    </div>
    <div>
      <div
        class="c11"
      >
        <input
          class="c12"
          name="salairePeriods[1].salary"
          size="10"
          type="number"
          value="1000"
        />
        <span
          aria-hidden="true"
          class="c13"
        >
          €
        </span>
      </div>
      <button
        class="c14 c15"
        type="button"
      >
        Supprimer
      </button>
    </div>
  </div>
  <button
    class="c14 c16"
    type="button"
  >
    Ajouter une période
  </button>
</div>
`;
